Added base for Rumble Support
Though I don't think it'll work. Most devices use the PID/VID for checking the Rumble support of the GamePad ￣へ￣

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(SRCS 
                     "BleConnectionStatus.cpp" "BleGamepad.cpp" 
-                    "BleGamepadConfiguration.cpp"
+                    "BleGamepadConfiguration.cpp" "BleGamepadOutput.cpp"
                     INCLUDE_DIRS "."
                     REQUIRES driver
                     esp_common esp_system
